tests/compile_errors/yield-location.buzz
// Can't yield here
test "Bad yield" {
    _ = yield "yolo";
}
